<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="music_home_page">Music</string>
    <string name="music_search_online_page">Search</string>
    <string name="music_library_page">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text">Search</string>
    <string name="search_here_text">Search Here</string>
    <string name="todo">TODO</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">\u0020artist name</string>
    <string name="minus">-</string>
    <string name="album_name">Album Name</string>
    <string name="songs_thumbnail">Songs Thumbnail</string>
    <string name="btn_allow_permission_text">Allow Permissions!</string>
    <string name="thumbnail_of_the_song_which_is_playing">Thumbnail of the song which is playing.</string>
    <string name="button_which_minimize_the_playing_song_screen">Button which minimize the playing song screen.</string>
    <string name="_00_00">00:00</string>
    <string name="artistName">ArtistName</string>
    <string name="folder_name">Folder Name</string>
    <string name="shuffle_songs">Shuffle Songs</string>
    <string name="play">Play</string>
    <string name="next_audio">Next Audio</string>
    <string name="previous_audio">Previous Audio</string>
</resources>